fixed margin collapse on group feed header

--- a/components/GroupFeed/index.module.css
+++ b/components/GroupFeed/index.module.css
@@ -4,6 +4,7 @@
 
 .titleContainer{
     position: sticky;
+    display: flow-root;
     top: 0;
     /* margin-bottom: 3px; */
     width: 100%;
